# sol-swarm-elite

./: .env.example  .gitignore  API_DOCUMENTATION.md  DELIVERY_MANIFEST.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  IMPLEMENTATION_GUIDE.md  INDEX.md  LICENSE  PROJECT_SUMMARY.md  PUMPFUN_GUIDE.md  QUICKSTART.md  README.md  RUN_LOCAL.sh  START_HERE.md  __init__(1).py  ceo_agent.py  command_center.py  docker-compose.yml  generate_docs.py  generate_wallets.py  main.py  pyproject.toml  railway.json  render.yaml  requirements.txt  sentiment_agent.py  setup.sh  setup_all.sh  test_system.py  types.py
.github/workflows/: ci.yml
config/: settings.py
dashboard/: app.py
dashboard/components/: tokenomics_panel.py
src/: __init__.py  command_center.py  constants.py  types.py
src/agents/: __init__.py  agent_spawner.py  arbiter_agent.py  ceo_agent.py  scout_agent.py  sell_agent.py  sentiment_agent.py  sniper_agent.py  state.py  treasury_agent.py
src/analysis/: backtest.py
src/services/: __init__.py  api_aggregator.py  phantom_wallet.py
src/strategies/: __init__.py
src/tokenomics/: __init__.py  agent_hooks.py  agent_token.py  fee_collector.py  fee_router.py  token_launch.py
tests/: test_agents.py
